--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,6 @@
 @import "cards";
 @import "typography";
 @import "components";
-/* Layout geral do portifolio */
 
 $grid-mobil: "gHeader" "gContent" "gRight" "gFooter";
 $grid-desktop: "gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader" "gContent gContent gContent gContent gContent gContent gContent gContent gContent gContent gRight gRight" "gFooter gFooter gFooter gFooter gFooter gFooter gFooter gFooter gFooter gFooter gFooter gFooter";
@@ -29,37 +28,41 @@ $grid-desktop: "gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader 
   background-color: lighten($secondary-color, 5%);
   border-bottom: 1px solid $secondary-color-dark;
   display: grid;
-  grid-template-areas: "logo menuLeft menuLeft menuLeft menuLeft menuLeft menuRight menuRight menuRight menuRight menuRight menuRight";
-  grid-template-rows: auto 3.2rem auto;
+  grid-template-areas: "logo menu .";
+  grid-template-columns: 2fr 8fr 2fr;
   &__logo {
-    float: left;
-    text-align: center;
     grid-area: logo;
     margin: $space1;
+    text-align:center;
     img {
       border-radius: $space1;
       background-color: white;
-      border: 1px double $primary-color;
+      border: 2px solid $secondary-color-dark;
     }
   }
   &__menu {
-    &__right {
-      margin-top: 1rem;
-      grid-area: menuRight;
-      display: flex;
+    grid-area: menu;
+    margin-top:$space3;
+    text-transform:lowercase;
+    ul{
+      width: 40%;
       li {
-        padding: $space1;
+        padding: $space0 $space1;
         display: inline;
+        .active, a:hover {
+          border-bottom: 3px solid $primary-color;
+          transition: all 0.2s ease-in;
+          padding-bottom:$space1;
+        }
       }
     }
-    &__left {
-      margin-top: 1rem;
-      grid-area: menuLeft;
-      display: flex;
-      li {
-        display: inline;
-        padding: $space1;
-      }
+    &__right {
+      text-align: right;
+      float: right;
+    }
+    &__left {      
+      text-align:left;
+      float:left;
     }
   }
 }
@@ -71,27 +74,7 @@ $grid-desktop: "gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader 
   grid-auto-columns: 1fr;
   @media screen and (min-width: $md) {
     grid-template-areas: ". gArticle gArticle gArticle gArticle";
-  } // Menu lateral direito
-  &__sidebar {
-    margin: -5rem $space1 0 0;
-    background-color: white;
-    border-right: 1px solid $secondary-color-dark;
-    img {
-      text-align: center;
-    }
-    &__menu {
-      grid-area: gMenu;
-      margin: 0.5rem $space1;
-      .active {
-        margin: 0rem -2.1rem 0rem -2rem;
-        padding: 1.5rem 2.5rem;
-        background-color: $secondary-color;
-        border-top: 1px solid $secondary-color-dark;
-        border-bottom: 1px solid $secondary-color-dark;
-        border-right: 1px solid $secondary-color;
-      }
-    }
-  } //Conteúdo
+  }
   &__article {
     background-color: white;
     grid-area: gArticle;
@@ -113,23 +96,4 @@ $grid-desktop: "gHeader gHeader gHeader gHeader gHeader gHeader gHeader gHeader 
       }
     }
   }
-}
-
-.right {
-  grid-area: gRight;
-  display: grid;
-  grid-template-areas: "gBlog" "gPoesia";
-  grid-auto-columns: 1fr;
-  margin-right: 2rem;
-  @media screen and (min-width: $md) {
-    grid-template-areas: "gBlog gPoesia";
-    padding: 0.5rem;
-  }
-}
-
-.footer {
-  grid-area: gFooter;
-  position: absolute;
-  bottom: 0;
-  width: 100vmax;
 }
