--- a/src/templates/palhacaria.pug
+++ b/src/templates/palhacaria.pug
@@ -2,7 +2,7 @@ extends layout.pug
 block article
     article.content__article
         header.content__article__header
-            h2 #{htmlWebpackPlugin.options.title}
+            
         .content__article__tab
             .content__article__tab__header        
                 button#defaultOpen.tablink(onclick="openPage('apresenta', this, 'white')") apresentação
@@ -18,45 +18,17 @@ block article
                         p Depois de um longo período hibernando, Magrólhos renasce das cinzas com o “desespetáculo” solo de rua “Circo da Miséria”, que aborda a vida da população em situação de rua. É com este trabalho, com o palhaço-vagabundo, que venho rodando e me aprimorando.
                 #circo.tabcontent
                     .row
-                        .col-1-of-2
+                        .row
                             img.img-responsive(src='http://www.eupassarinho.org/wp-content/uploads/2015/09/MG_6909.jpg', alt='Magrólios no Circo da Miséria')
-                            .row
-                                
-                                .col-2-of-2
-                                    h3 Ficha t&eacute;cnica
-                                    
-                                    p Cria&ccedil;&atilde;o e atua&ccedil;&atilde;o: 
-                                        strong Jeff Vasques
-                                    
-                                    p Orienta&ccedil;&atilde;o: 
-                                    
-                                        strong Luciane Olendski
-                                    
-                                    p Assistente de dire&ccedil;&atilde;o: 
-                                    
-                                     strong Taiane Raffa
-                                    
-                                    p Figurino: 
-                                    
-                                        strong &Acirc;ngela Sauerbronn
-                                    
-                                    p Fotografia: 
-                                        strong Natasha Mota 
-                                    
-                                    p Projeto gr&aacute;fico: 
-                                    
-                                        strong Denis Forigo
-                            .row
-                                .col-1-of-2
-                                    h3 Apoio
-                                    p Centro Pop
-                                    p 8&ordf; Mostra Luta
-                                    p CAC Hortol&acirc;ndia
-                                    p Casa de Cultura Tain&atilde;
-                                .col-1-of-2
-                                    h3 Patroc&iacute;nio
-                                    p
-                                        a(href='http://www.eupassarinho.org/wp-content/uploads/2015/09/Logo_novotempo-cultura-ficc.jpg')
-                                        img.img-responsive(src='http://www.eupassarinho.org/wp-content/uploads/2015/09/Logo_novotempo-cultura-ficc-300x114.jpg', alt='Logo_novotempo+cultura+ficc', width='300', height='114')
-                        .col-1-of-2
-                            p  No espet&aacute;culo de palha&ccedil;o &ldquo;Circo da Mis&eacute;ria&rdquo;, Jeff Vasques, ou melhor, Magr&oacute;lhos, o protagonista desse grande cerco chamado &ldquo;mis&eacute;ria&rdquo;, chega a mais uma pra&ccedil;a como um saltimbanco em roupas surradas, carregando em seus bolsos fome e o p&oacute; das estradas. Chega como um mambembe, como mais um catador colhendo o que j&aacute; n&atilde;o tem serventia para lhes dar nova vida; enfim, chega como um palha&ccedil;o &ldquo;vagabundo&rdquo;, armando sua lona preta sob a qual dorme e sobre a qual levanta o picadeiro de sua luta di&aacute;ria por sobreviv&ecirc;ncia.O espet&aacute;culo &eacute; inspirado a partir do contato com a realidade da popula&ccedil;&atilde;o em situa&ccedil;&atilde;o de rua e na tradi&ccedil;&atilde;o dos palha&ccedil;os &ldquo;vagabundos&rdquo;, que tem em Carlitos, de Charles Chaplin, sua encarna&ccedil;&atilde;o mais famosa. Esses palha&ccedil;os usam da criatividade e de toda seu &ldquo;jeitinho esperto&rdquo; para garantirem o seu ganha-p&atilde;o, como abordado por Ant&ocirc;nio C&acirc;ndido em &ldquo;A dial&eacute;tica da malandragem&rdquo; e, eternizado, em figuras como Jo&atilde;o Grilo, no &ldquo;Auto da Compadecida&rdquo; de Ariano Suassuna.Ora provocando risos, ora comovendo, Magr&oacute;lhos convida os espectadores a adentrarem o maior desespet&aacute;culo da Terra e romperem o cerco que os imobiliza, convidando-os a oferecer a m&atilde;o, a compartirem indigna&ccedil;&atilde;o e solidariedade. Magr&oacute;lhos &eacute; o peregrino que todos, no fundo, somos, vagando a procura de humanidade nos restos e ru&iacute;nas de um mundo t&atilde;o desumano.
+                        .row
+                            .col-3-of-4
+                                p No espetáculo de palhaço “Circo da Miséria”, Jeff Vasques, ou melhor, Magrólhos, o protagonista desse grande cerco chamado “miséria”, chega a mais uma praça como um saltimbanco em roupas surradas, carregando em seus bolsos fome e o pó das estradas. Chega como um mambembe, como mais um catador colhendo o que já não tem serventia para lhes dar nova vida; enfim, chega como um palhaço “vagabundo”, armando sua lona preta sob a qual dorme e sobre a qual levanta o picadeiro de sua luta diária por sobrevivência.O espetáculo é inspirado a partir do contato com a realidade da população em situação de rua e na tradição dos palhaços “vagabundos”, que tem em Carlitos, de Charles Chaplin, sua encarnação mais famosa. Esses palhaços usam da criatividade e de toda seu “jeitinho esperto” para garantirem o seu ganha-pão, como abordado por Antônio Cândido em “A dialética da malandragem” e, eternizado, em figuras como João Grilo, no “Auto da Compadecida” de Ariano Suassuna.Ora provocando risos, ora comovendo, Magrólhos convida os espectadores a adentrarem o maior desespetáculo da Terra e romperem o cerco que os imobiliza, convidando-os a oferecer a mão, a compartirem indignação e solidariedade. Magrólhos é o peregrino que todos, no fundo, somos, vagando a procura de humanidade nos restos e ruínas de um mundo tão desumano.
+
+                                p O “Circo da Miséria” pode ser levado pra qualquer tipo de espaço e posso, caso haja interesse, após a apresentação, realizar uma oficina sobre “A origem da miséria”.
+                            .col-1-of-4
+                                .card
+                                    .card-img
+                                        img(src="./src/img/foto-pra-circo-da-miseria-4.jpg", class="img-responsive")
+                                    .card-body
+                                        p.card-text 
+                                            a(href="http://www.eupassarinho.org/blog/wp-content/uploads/2017/03/Projeto-Circo-da-Mis%C3%A9ria-Jeff-Vasques.pdf", target="_blank") Aqui você pode baixar o Projeto Circo da Miséria
